changed for group directive parameter to just form group

--- a/demo/components/demo/components/input-text/input-text.html
+++ b/demo/components/demo/components/input-text/input-text.html
@@ -1,6 +1,6 @@
-<form [formGroup]="inputForm" #f="ngForm">
+<form [formGroup]="inputForm">
     <div class="layout-row layout-column-xs layout-padding">
-        <input-text [fgd]="f" label="First Name" class="flex-50" field="firstName">
+        <input-text [fg]="inputForm" label="First Name" class="flex-50" field="firstName">
             <h1>something</h1>
         </input-text>
     </div>
