--- a/demo/components/demo/forms/checkbox/checkbox.html
+++ b/demo/components/demo/forms/checkbox/checkbox.html
@@ -1,36 +1,36 @@
-<form [formGroup]="fg" #f="ngForm">
+<form [formGroup]="fg">
 
     <pre>
-        {{ f.value | json }}
+        {{ fg.value | json }}
     </pre>
 
     <div class="row m-t-35">
         <div class="col-xs-12 col-sm-4">
             <!-- Normal Checkbox -->
-            <checkbox [fgd]="f" field="toggle1" label="Simple Checkbox"></checkbox>
+            <checkbox [fg]="fg" field="toggle1" label="Simple Checkbox"></checkbox>
         </div>
         <div class="col-xs-12 col-sm-4">
             <!-- Disabled Checkbox -->
-            <checkbox [fgd]="f" field="toggle2" [disabled]="true" label="Disabled Checkbox"></checkbox>
+            <checkbox [fg]="fg" field="toggle2" [disabled]="true" label="Disabled Checkbox"></checkbox>
         </div>
         <div class="col-xs-12 col-sm-4">
             <!-- Checked by default -->
-            <checkbox [fgd]="f" field="toggle1" label="Checked by default" [value]="true"></checkbox>
+            <checkbox [fg]="fg" field="toggle1" label="Checked by default" [value]="true"></checkbox>
         </div>
     </div>
 
     <div class="row m-t-35 p-t-15 m-b-25 bgm-green">
         <div class="col-xs-12 col-sm-4">
             <!-- Normal Checkbox -->
-            <checkbox [fgd]="f" field="toggle1" label="Simple Checkbox" [alt]="true"></checkbox>
+            <checkbox [fg]="fg" field="toggle1" label="Simple Checkbox" [alt]="true"></checkbox>
         </div>
         <div class="col-xs-12 col-sm-4">
             <!-- Disabled Checkbox -->
-            <checkbox [fgd]="f" field="toggle2" [disabled]="true" label="Disabled Checkbox" [alt]="true"></checkbox>
+            <checkbox [fg]="fg" field="toggle2" [disabled]="true" label="Disabled Checkbox" [alt]="true"></checkbox>
         </div>
         <div class="col-xs-12 col-sm-4">
             <!-- Checked by default -->
-            <checkbox [fgd]="f" field="toggle1" label="Checked by default" [value]="true" [alt]="true"></checkbox>
+            <checkbox [fg]="fg" field="toggle1" label="Checked by default" [value]="true" [alt]="true"></checkbox>
         </div>
     </div>
 
