--- a/demo/components/demo/forms/radio/radio.html
+++ b/demo/components/demo/forms/radio/radio.html
@@ -1,7 +1,7 @@
-<form [formGroup]="fg" #f="ngForm">
+<form [formGroup]="fg">
 
     <pre>
-        {{ f.value | json }}
+        {{ fg.value | json }}
     </pre>
 
     <div class="row m-t-35">
@@ -12,7 +12,7 @@
                 Standard group
             </p>
 
-            <radio-group [fgd]="f" field="simpleRadioGroup">
+            <radio-group [fg]="fg" field="simpleRadioGroup">
                 <!-- Normal Checkbox -->
                 <radio label="Option 1" value="option1"></radio>
                 <radio label="Option 2" value="option2"></radio>
@@ -27,7 +27,7 @@
                 Group with selected value
             </p>
 
-            <radio-group [fgd]="f" field="defaultRadioGroup" [defaultValue]="defaultValue">
+            <radio-group [fg]="fg" field="defaultRadioGroup" [defaultValue]="defaultValue">
                 <!-- Normal Checkbox -->
                 <radio label="Option 4" value="option4"></radio>
                 <radio label="Option 5" value="option5"></radio>
@@ -42,7 +42,7 @@
                 Group with options disabled
             </p>
 
-            <radio-group [fgd]="f" field="disabledRadioGroup" [defaultValue]="defaultValue">
+            <radio-group [fg]="fg" field="disabledRadioGroup" [defaultValue]="defaultValue">
                 <!-- Normal Checkbox -->
                 <radio label="Option 7" value="option7"></radio>
                 <radio label="Option 8" value="option8" [disabled]="true"></radio>
@@ -62,7 +62,7 @@
                 Standard group
             </p>
 
-            <radio-group [fgd]="f" field="simpleRadioGroup" [alt]="true">
+            <radio-group [fg]="fg" field="simpleRadioGroup" [alt]="true">
                 <!-- Normal Checkbox -->
                 <radio label="Option 1" value="option1"></radio>
                 <radio label="Option 2" value="option2"></radio>
@@ -77,7 +77,7 @@
                 Group with selected value
             </p>
 
-            <radio-group [fgd]="f" field="defaultRadioGroup" [defaultValue]="defaultValue" [alt]="true">
+            <radio-group [fg]="fg" field="defaultRadioGroup" [defaultValue]="defaultValue" [alt]="true">
                 <!-- Normal Checkbox -->
                 <radio label="Option 4" value="option4"></radio>
                 <radio label="Option 5" value="option5"></radio>
@@ -92,7 +92,7 @@
                 Group with options disabled
             </p>
 
-            <radio-group [fgd]="f" field="disabledRadioGroup" [defaultValue]="defaultValue" [alt]="true">
+            <radio-group [fg]="fg" field="disabledRadioGroup" [defaultValue]="defaultValue" [alt]="true">
                 <!-- Normal Checkbox -->
                 <radio label="Option 7" value="option7"></radio>
                 <radio label="Option 8" value="option8" [disabled]="true"></radio>
