--- a/src/forms/radio/radio.component.pug
+++ b/src/forms/radio/radio.component.pug
@@ -1,6 +1,6 @@
 .radio.m-b-15([class.disabled]="disabled")
   label
-    input(type='radio', name="{{groupName}}",
+    input(type='radio', [name]="groupName",
         [attr.disabled]="disabled",
         [attr.value]="value",
         (click)="check()")
