--- a/demo/components/demo/forms/password/password.html
+++ b/demo/components/demo/forms/password/password.html
@@ -2,21 +2,21 @@
 <form [formGroup]="fg" #f="ngForm">
 
     <pre>
-        {{ f.value | json }}
+        {{ fg.value | json }}
     </pre>
 
     <div class="row m-t-35">
 
         <div class="col-xs-12 col-sm-4">
             <!-- Normal password -->
-            <password [fgd]="f"
+            <password [fg]="fg"
                 field="password"
                 label="User Password"></password>
         </div>
 
         <div class="col-xs-12 col-sm-4">
             <!-- Disabled Password -->
-            <password [fgd]="f"
+            <password [fg]="fg"
                 [disabled]="true"
                 field="disabledPassword"
                 label="Password Disabled"></password>
@@ -24,7 +24,7 @@
 
         <div class="col-xs-12 col-sm-4">
             <!-- Enforcing Complexity -->
-            <password [fgd]="f"
+            <password [fg]="fg"
                 [enforceComplexity]="true"
                 field="complexPassword"
                 label="Complex Password"></password>
