--- a/demo/components/demo/forms/phone/phone.html
+++ b/demo/components/demo/forms/phone/phone.html
@@ -1,22 +1,22 @@
 
-<form [formGroup]="fg" #f="ngForm">
+<form [formGroup]="fg">
 
     <pre>
-        {{ f.value | json }}
+        {{ fg.value | json }}
     </pre>
 
     <div class="row m-t-35">
 
         <div class="col-xs-12 col-sm-4">
             <!-- Personal phone -->
-            <phone [fgd]="f"
+            <phone [fg]="fg"
                 field="phone"
                 label="Personal Phone"></phone>
         </div>
 
         <div class="col-xs-12 col-sm-4">
             <!-- Disabled phone -->
-            <phone [fgd]="f"
+            <phone [fg]="fg"
                 [disabled]="true"
                 field="disabledPhone"
                 label="Phone Disabled"></phone>
