--- a/demo/components/demo/forms/text-area/text-area.html
+++ b/demo/components/demo/forms/text-area/text-area.html
@@ -1,15 +1,15 @@
 
-<form [formGroup]="fg" #f="ngForm">
+<form [formGroup]="fg">
 
     <pre>
-        {{ f.value | json }}
+        {{ fg.value | json }}
     </pre>
 
     <div class="row m-t-35">
 
         <div class="col-xs-12 col-sm-6">
             <!-- Classic text area -->
-            <text-area [fgd]="f"
+            <text-area [fg]="fg"
                 field="longText"
                 label="Big Description"
                 placeholder="please enter a long text here"
@@ -19,7 +19,7 @@
 
         <div class="col-xs-12 col-sm-6">
             <!-- Disabled text area -->
-            <text-area [fgd]="f"
+            <text-area [fg]="fg"
                 [disabled]="true"
                 field="disabledDescription"
                 label="Description Disabled"
@@ -30,7 +30,7 @@
 
         <div class="col-xs-12">
             <!-- Autozized text area -->
-            <text-area [fgd]="f"
+            <text-area [fg]="fg"
                 field="autosized"
                 label="Auto-Expand Content"
                 placeholder="I am going to expand myself with the content you enter here">
@@ -43,7 +43,7 @@
 
         <div class="col-xs-12 col-sm-6">
             <!-- Classic text area -->
-            <text-area [fgd]="f"
+            <text-area [fg]="fg"
                 field="longText"
                 label="Big Description"
                 placeholder="please enter a long text here"
@@ -54,7 +54,7 @@
 
         <div class="col-xs-12 col-sm-6">
             <!-- Disabled text area -->
-            <text-area [fgd]="f"
+            <text-area [fg]="fg"
                 [disabled]="true"
                 field="disabledDescription"
                 label="Description Disabled"
@@ -66,7 +66,7 @@
 
         <div class="col-xs-12">
             <!-- Autozized text area -->
-            <text-area [fgd]="f"
+            <text-area [fg]="fg"
                 field="autosized"
                 label="Auto-Expand Content"
                 placeholder="I am going to expand myself with the content you enter here"
