--- a/src/forms/input-base/input-base.component.pug
+++ b/src/forms/input-base/input-base.component.pug
@@ -3,7 +3,7 @@ include ../../mixins/base.pug
 .input-group.m-b-15.w-100(
     [class.fg-float]="floatingLabel",
     [class.fc-alt]="alt",
-    [ngClass]="{ 'has-error': !control.valid && (fgd.form.submitted || control.dirty)}")
+    [ngClass]="{ 'has-error': !control.valid && (fg.submitted || control.dirty)}")
 
     label(*ngIf="label && !floatingLabel") {{label}}
 
@@ -26,5 +26,5 @@ include ../../mixins/base.pug
     span.input-group-addon.last(*ngIf="rightIcon")
         +dynamic-icn('rightIcon')
 
-    div(*ngIf="!control.valid && (control.dirty || fgd.form.submitted)")
+    div(*ngIf="!control.valid && (control.dirty || fg.submitted)")
         small.help-block.animated.fadeInDown(*ngFor="let v of validations", [class.hidden]="!control.errors[v.type]") {{v.message}}
