--- a/src/forms/number/number.component.pug
+++ b/src/forms/number/number.component.pug
@@ -4,7 +4,7 @@ include ../../mixins/base.pug
     [class.fg-float]="floatingLabel",
     [class.fc-alt]="alt",
     style="width: 100%",
-    [ngClass]="{ 'has-error': !control.valid && (fgd.form.submitted || control.dirty)}")
+    [ngClass]="{ 'has-error': !control.valid && (fg.submitted || control.dirty)}")
 
     label(*ngIf="label && !floatingLabel") {{label}}
 
@@ -28,5 +28,5 @@ include ../../mixins/base.pug
     span.input-group-addon.last(*ngIf="rightIcon")
         +dynamic-icn('rightIcon')
 
-    div(*ngIf="!control.valid && (control.dirty || fgd.form.submitted)")
+    div(*ngIf="!control.valid && (control.dirty || fg.submitted)")
         small.help-block.animated.fadeInDown(*ngFor="let v of validations", [class.hidden]="!control.errors[v.type]") {{v.message}}
