--- a/src/forms/date-time-picker/date-time-picker.component.pug
+++ b/src/forms/date-time-picker/date-time-picker.component.pug
@@ -1,4 +1,4 @@
-.input-group.form-group
+.input-group.form-group([class.fc-alt]="alt")
     span.input-group-addon
         i.zmdi.zmdi-calendar
     .dtp-container.fg-line([class.disabled]="disabled", [class.fg-toggled]="toggled")
