--- a/src/scss/app/form.scss
+++ b/src/scss/app/form.scss
@@ -114,15 +114,15 @@ input:focus {
 
     &.fc-alt {
         label {
-            color: white;
+            color: $m-alt;
         }
         .input-helper {
             &:before {
-                border: 1px solid white;
+                border: 1px solid $m-alt;
             }
             &:after {
-                border-bottom: 2px solid white;
-                border-left: 2px solid white;
+                border-bottom: 2px solid $m-alt;
+                border-left: 2px solid $m-alt;
             }
         }
     }
@@ -132,15 +132,15 @@ input:focus {
 
     &.fc-alt {
         .radio {
-            color: white;
+            color: $m-alt;
 
             .input-helper {
                 &:before {
                     left: 0;
-                    border: 1px solid white;
+                    border: 1px solid $m-alt;
                 }
                 &:after {
-                    background: white;
+                    background: $m-alt;
                 }
             }
         }
@@ -230,19 +230,19 @@ html:not(.ie9) {
 
     &.fc-alt {
         .input-group-addon {
-            color: white;
+            color: $m-alt;
         }
 
         .fg-line {
-            &:after { background: white; }
+            &:after { background: $m-alt; }
             input {
-                color: white;
-                border-color: white;
+                color: $m-alt;
+                border-color: $m-alt;
             }
 
         }
 
-        .fg-label { color: white; }
+        .fg-label { color: $m-alt; }
 
         &.has-error {
             .fg-line {
@@ -548,29 +548,29 @@ html:not(.ie9) {
 .text-area.form-group {
 
     &.fc-alt {
-        color: white;
+        color: $m-alt;
 
         .fg-line {
 
             &:after {
-                background-color: white;
+                background-color: $m-alt;
             }
 
             textarea {
-                color: white;
+                color: $m-alt;
                 background: transparent;
 
                 &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-                  color: #d6d6d6;
+                  color: $m-alt-placeholder;
                 }
                 &::-moz-placeholder { /* Firefox 19+ */
-                  color: #d6d6d6;
+                  color: $m-alt-placeholder;
                 }
                 &:-ms-input-placeholder { /* IE 10+ */
-                  color: #d6d6d6;
+                  color: $m-alt-placeholder;
                 }
                 &:-moz-placeholder { /* Firefox 18- */
-                  color: #d6d6d6;
+                  color: $m-alt-placeholder;
                 }
             }
         }
