--- a/demo/components/demo/forms/date-time-picker/date-time-picker.html
+++ b/demo/components/demo/forms/date-time-picker/date-time-picker.html
@@ -70,11 +70,11 @@
         </div>
     </div>
 
-    <div class="row m-t-35 bgm-pink">
+    <div class="row m-t-35 p-t-15 m-b-25 bgm-pink">
         <div class="col-xs-12 col-sm-4">
             <!-- Standard Date Time Picker -->
             <date-time-picker
-                [fgd]="f"
+                [fg]="fg"
                 field="birthday2"
                 placeholder="Birthday"
                 (dateChanged)="dateChanged($event)"
@@ -85,7 +85,7 @@
         <div class="col-xs-12 col-sm-4">
             <!-- Disabled Date Time Picker -->
             <date-time-picker
-                [fgd]="f"
+                [fg]="fg"
                 field="birthdayDisabled2"
                 placeholder="Birthday Disabled"
                 [disabled]="true"
@@ -96,7 +96,7 @@
         <div class="col-xs-12 col-sm-4">
             <!-- Custom Format -->
             <date-time-picker
-                [fgd]="f"
+                [fg]="fg"
                 field="justDate2"
                 placeholder="Just Date"
                 format="MM/DD/YYYY"
