--- a/src/ng2-material-components.hbs
+++ b/src/ng2-material-components.hbs
@@ -1,6 +1,6 @@
 // models
-export { IMenuItem } from './models/menu-item';
-export { ISelectionItem } from './models/selection-item';
+export { MenuItem } from './models/menu-item';
+export { SelectionItem } from './models/selection-item';
 
 // layout
 {{#each layout}}
