fixed selection icon background color, I changed it to transparent

--- a/src/scss/vendor-overrides/bootstrap-select.scss
+++ b/src/scss/vendor-overrides/bootstrap-select.scss
@@ -33,7 +33,7 @@
             content: "";
             height: calc(100% - 2px);
             width: 30px;
-            background-color: #FFF;
+            background-color: transparent;
             background-position: right calc(100% - 7px);
             background-repeat: no-repeat;
             @include img-retina('./img/select.png', './img/select@2x.png', 12px, 12px);
