--- a/src/forms/select-picker/select-picker.component.pug
+++ b/src/forms/select-picker/select-picker.component.pug
@@ -1,4 +1,4 @@
-.btn-group.bootstrap-select.my-.ng-untouched
+.btn-group.bootstrap-select([class.fc-alt]="alt")
     button.btn.dropdown-toggle.btn-default(type='button', data-toggle='dropdown',
             role='button', title='{{selected}}', aria-expanded='true', (click)="toggleOpen()")
         span.filter-option.pull-left {{selection}}
