--- a/src/scss/vendor-overrides/bootstrap-select.scss
+++ b/src/scss/vendor-overrides/bootstrap-select.scss
@@ -36,7 +36,7 @@
             background-color: transparent;
             background-position: right calc(100% - 7px);
             background-repeat: no-repeat;
-            @include img-retina('./img/select.png', './img/select@2x.png', 12px, 12px);
+            // @include img-retina('./img/select.png', './img/select@2x.png', 12px, 12px);
             pointer-events: none;
             z-index: 5;
         }
@@ -134,5 +134,16 @@
 
     &:not([class*=col-]):not([class*=form-control]):not(.input-group-btn) {
         width: 100%;
+    }
+
+    &.fc-alt {
+        button {
+            .filter-option {
+                color: $m-alt;
+            }
+        }
+        .bs-caret {
+            color: $m-alt-placeholder;
+        }
     }
 }
