--- a/src/forms/number/number.component.pug
+++ b/src/forms/number/number.component.pug
@@ -15,7 +15,7 @@ include ../../mixins/base.pug
 
         input.form-control(
             #i,
-            type="text",
+            type="number",
             [textMask]="{ control: control, mask: numberMask }"
             placeholder="{{placeholder}}",
             [formControl]="control",
