ok things are starting to wok now .. FINALLY

--- a/src/navigation/tabset/tabset.component.pug
+++ b/src/navigation/tabset/tabset.component.pug
@@ -1,10 +1,15 @@
 ul.tab-nav.tn-justified(role='tablist', (click)='$event.preventDefault()', [ngClass]="classMap" )
-    li.nav-item(*ngFor='let tabz of tabs', [class.active]='tabz.active', [class.disabled]='tabz.disabled', role="presentation")
+    li.nav-item(
+        *ngFor='let tabz of tabs', 
+        [class.active]='tabz.active', 
+        [class.disabled]='tabz.disabled', 
+        role="presentation")
+        
         a.nav-link(href='', [class.active]='tabz.active', [class.disabled]='tabz.disabled', (click)='tabz.active = true')
             i.zmdi(*ngIf="tabz.icon", class="zmdi-{{tabz.icon}}", [ngClass]="{ 'icon-tab': iconTab }")
             span([ngTransclude]='tabz.headingRef') {{tabz.heading}}
             span(*ngIf='tabz.removable')
-                span.glyphicon.glyphicon-remove-circle((click)='$event.preventDefault(); removeTab(tabz);')
+                span.zmdi.zmdi-close-circle((click)='$event.preventDefault(); removeTab(tabz);')
 
 .tab-content
     ng-content
