change input type for the date time picker when on a browser

--- a/src/forms/date-time-picker/date-time-picker.component.pug
+++ b/src/forms/date-time-picker/date-time-picker.component.pug
@@ -4,7 +4,7 @@
     .dtp-container.fg-line([class.disabled]="disabled", [class.fg-toggled]="toggled")
         input.form-control.date-time-picker(
             #i,
-            type="date",
+            [type]="inputType",
             placeholder="{{placeholder}}",
             [formControl]="control",
             [attr.disabled]="disabled",
