enabled animations on the side menu

--- a/src/scss/app/sidebar.scss
+++ b/src/scss/app/sidebar.scss
@@ -192,7 +192,7 @@
 
     ul {
         list-style: none;
-        display: none;
+        // display: none;
         padding: 0;
 
         & > menu-item {
