--- a/src/scss/app/sidebar.scss
+++ b/src/scss/app/sidebar.scss
@@ -3,6 +3,7 @@
     background: #fff;
     box-shadow: 0 0 10px rgba(51, 51, 51, 0.38);
     top: 65px;
+    left: 0;
     height: calc(100% - 65px);
     @include translate3d(-$sidebar-left-width, 0, 0);
     z-index: 5;
