--- a/demo/components/demo/forms/date-time-picker/date-time-picker.html
+++ b/demo/components/demo/forms/date-time-picker/date-time-picker.html
@@ -4,106 +4,9 @@
         {{ fg.value | json }}
     </pre>
 
-    <div class="row m-t-35">
-        <div class="col-xs-12 col-sm-4">
-            <!-- Standard Date Time Picker -->
-            <date-time-picker
-                [fg]="fg"
-                field="birthday"
-                placeholder="Birthday"
-                (dateChanged)="dateChanged($event)">
-            </date-time-picker>
-        </div>
-
-        <div class="col-xs-12 col-sm-4">
-            <!-- Disabled Date Time Picker -->
-            <date-time-picker
-                [fg]="fg"
-                field="birthdayDisabled"
-                placeholder="Birthday Disabled"
-                [disabled]="true">
-            </date-time-picker>
-        </div>
-
-        <div class="col-xs-12 col-sm-4">
-            <!-- Custom Format -->
-            <date-time-picker
-                [fg]="fg"
-                field="justDate"
-                placeholder="Just Date"
-                format="MM/DD/YYYY">
-            </date-time-picker>
-        </div>
-
+    <div>
+        <date-time-picker [fg]="fg" field="birthday"></date-time-picker>
     </div>
 
-    <div class="row m-t-35">
-        <div class="col-xs-12 col-sm-4">
-            <!-- Min Date -->
-            <date-time-picker
-                [fg]="fg"
-                field="minDate"
-                placeholder="Min Date"
-                [minDate]="minDate">
-            </date-time-picker>
-        </div>
-
-        <div class="col-xs-12 col-sm-4">
-            <!-- Max Date -->
-            <date-time-picker
-                [fg]="fg"
-                field="maxDate"
-                placeholder="Max Date"
-                [maxDate]="maxDate">
-            </date-time-picker>
-        </div>
-
-        <div class="col-xs-12 col-sm-4">
-            <!-- Range -->
-            <date-time-picker
-                [fg]="fg"
-                field="range"
-                placeholder="Between"
-                [minDate]="minDate"
-                [maxDate]="maxDate">
-            </date-time-picker>
-        </div>
-    </div>
-
-    <div class="row m-t-35 p-t-15 m-b-25 bgm-pink">
-        <div class="col-xs-12 col-sm-4">
-            <!-- Standard Date Time Picker -->
-            <date-time-picker
-                [fg]="fg"
-                field="birthday2"
-                placeholder="Birthday"
-                (dateChanged)="dateChanged($event)"
-                [alt]="true">
-            </date-time-picker>
-        </div>
-
-        <div class="col-xs-12 col-sm-4">
-            <!-- Disabled Date Time Picker -->
-            <date-time-picker
-                [fg]="fg"
-                field="birthdayDisabled2"
-                placeholder="Birthday Disabled"
-                [disabled]="true"
-                [alt]="true">
-            </date-time-picker>
-        </div>
-
-        <div class="col-xs-12 col-sm-4">
-            <!-- Custom Format -->
-            <date-time-picker
-                [fg]="fg"
-                field="justDate2"
-                placeholder="Just Date"
-                format="MM/DD/YYYY"
-                [alt]="true">
-            </date-time-picker>
-        </div>
-
-    </div>
-
+    
 </form>
