--- a/src/forms/datetime-picker/date-time-picker.component.pug
+++ b/src/forms/datetime-picker/date-time-picker.component.pug
@@ -3,14 +3,13 @@
         i.zmdi.zmdi-calendar
     .dtp-container.fg-line([class.disabled]="disabled", [class.fg-toggled]="toggled")
         input.form-control.date-time-picker(
-            ng2-datetime-picker,
             #i,
             [type]="inputType",
             placeholder="{{placeholder}}",
             [formControl]="control",
             [attr.disabled]="disabled",
-            (focus)="onFocus(i)",
-            (blur)="onBlur(i)" 
-            date-format="{{dateFormat}}")
+            (focus)="onFocus(i); showDatetimePicker($event)",
+            (blur)="onBlur(i)",
+            (change)="valueChanged()")
 
                 
