--- a/src/forms/datetime-picker/date-time-picker.component.pug
+++ b/src/forms/datetime-picker/date-time-picker.component.pug
@@ -8,9 +8,9 @@
             placeholder="{{placeholder}}",
             [formControl]="control",
             [attr.disabled]="disabled",
-            (focus)="onFocus(i, $event); showDatetimePicker($event)",
-            (blur)="onBlur(i, $event)",
-            (click)="showDatetimePicker($event)",
+            (focus)="onFocus(i); showDatetimePicker($event)",
+            (blur)="onBlur(i)",
+            (click)="preventDefault($event)",
             (change)="valueChanged()")
 
                 
