fixed a bunch of typescript errors

--- a/src/forms/datetime-picker/date-time-picker.component.pug
+++ b/src/forms/datetime-picker/date-time-picker.component.pug
@@ -11,6 +11,6 @@
             (focus)="onFocus(i); showDatetimePicker($event)",
             (blur)="onBlur(i)",
             (click)="preventDefault($event)",
-            (change)="valueChanged()")
+            (change)="valueChanged($event.target.value)")
 
                 
