added support for left and right icon to the select pickers

--- a/demo/components/demo/forms/select-picker/select-picker.html
+++ b/demo/components/demo/forms/select-picker/select-picker.html
@@ -25,7 +25,8 @@
                 field="color1"
                 label="Colors"
                 [disabled]="true"
-                [items]="colorItems">
+                [items]="colorItems"
+                rightIcon="globe">
             </select-picker>
         </div>
 
@@ -36,7 +37,8 @@
                 label="Colors"
                 [multiple]="true"
                 [items]="colorItems"
-                [maxOptions]="2">
+                [maxOptions]="2"
+                leftIcon="globe">
             </select-picker>
         </div>
 
