fixed color issue in alt mode for the select picker

--- a/demo/components/demo/forms/select-picker/select-picker.html
+++ b/demo/components/demo/forms/select-picker/select-picker.html
@@ -66,7 +66,8 @@
                 label="Colors"
                 [disabled]="true"
                 [items]="colorItems"
-                [alt]="true">
+                [alt]="true"
+                leftIcon="globe">
             </select-picker>
         </div>
 
