--- a/demo/app.jade
+++ b/demo/app.jade
@@ -7,7 +7,8 @@ app-header(color="blue",
 
 sidebar([open]="open")
     img.w-100(src="./img/angular-logo2.png")
-    side-menu([items]="menuItems")
+    side-menu([items]="menuItems",
+    (itemClicked)="onItemClicked($event)")
 
 section#main
     router-outlet
