--- a/src/user-interface/side-menu/side-menu.component.pug
+++ b/src/user-interface/side-menu/side-menu.component.pug
@@ -1,2 +1,2 @@
 ul.main-menu
-    side-menu-item(*ngFor="let item of items", [item]="item")
+    side-menu-item(*ngFor="let item of items", [item]="item", (itemClicked)="onItemClicked($event)")
