undo btn style changes

--- a/src/user-interface/button/button.component.pug
+++ b/src/user-interface/button/button.component.pug
@@ -1,8 +1,8 @@
 button.btn.waves-effect(class="bgm-{{color}} c-{{simpleColor}} btn-{{size}}", type="{{type}}",
     [class.btn-icon-text]="iconAndtext",
     [class.btn-block]="block",
-    [class.waves-circle]="circular || rounded",
-    [class.waves-float]="circular || rounded",
+    [class.waves-circle]="circular",
+    [class.waves-float]="circular",
     [class.btn-icon]="circular",
     [class.btn-rounded]="rounded",
     [class.btn-link]="simple",
