added selectTab method and added export for all components

--- a/demo/index.jade
+++ b/demo/index.jade
@@ -15,8 +15,8 @@ html(lang="en")
     script(type="application/javascript", src="assets/polyfill.min.js")
 
     // jquery, bootstrap and plugins
-    script(type="application/javascript", src="assets/jquery.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous")
-    script(src="assets/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous")
+    script(type="application/javascript", src="assets/jquery.min.js")
+    script(src="assets/bootstrap.min.js")
     script(type="application/javascript", src="assets/moment/moment.min.js")
     script(type="application/javascript", src="assets/waves.min.js")
 
