fized css issue when input group have errors

--- a/src/scss/app/form.scss
+++ b/src/scss/app/form.scss
@@ -264,6 +264,15 @@ html:not(.ie9) {
         }
 
     }
+
+    &.has-error {
+        .input-group-addon {
+            color: $m-red !important;
+            border-color: transparent !important;
+            background-color: transparent !important;
+        }
+    }
+
 }
 
 .input-group-addon {
